--- a/src/components/Theme/Dark.css
+++ b/src/components/Theme/Dark.css
@@ -1,21 +1,38 @@
 body {
-	background-color: #282c34;
+	background-color: #343536;
+}
+
+a:not([href]):not([tabindex]) {
+	color: none;
+	text-decoration: none;
+}
+
+a:not([href]):not([tabindex]):focus,
+a:not([href]):not([tabindex]):hover {
+	color: #fd5406;
 }
 
 .topNav {
-	width: 250px;
-	height: 60px;
-	margin-top: 20px;
-	margin-left: 30px;
-	background: linear-gradient(120deg, #08749e, #058f7c);
-	border-radius: 60px;
-	border: 1px solid #0ff;
+	width: 100%;
+	height: 80px;
+	background: #aaa;
+	/* border-bottom: 1px solid #0ff; */
 }
 
-ul {
+.brandLogo {
+	font-family: sans-serif;
+	font-size: 50px;
+	font-weight: bold;
+	color: #fd5406;
+}
+
+.topUL {
 	list-style: none;
 	padding: 0;
+	margin: 0;
 	text-align: center;
+	display: inline-block;
+	margin-left: 200px;
 }
 
 .topNav ul li {
@@ -24,6 +41,35 @@ ul {
 	font-family: Arial, Helvetica, sans-serif;
 	color: #fff;
 	margin: auto 10px;
+}
+
+.topUL a {
+	color: #27292b;
+	text-decoration: none;
+}
+
+.homeStyle h1 {
+	margin-top: 100px;
+	font-family: sans-serif;
+	font-size: 60px;
+	font-weight: lighter;
+	text-align: center;
+	color: #fd5406;
+}
+
+.homeStyle h4 {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 30px;
+	font-weight: lighter;
+	text-align: center;
+	color: #b95120;
+}
+.homeStyle p {
+	width: 80%;
+	margin: 0 auto;
+	text-align: center;
+	color: rgb(133, 133, 133);
+	font-size: 20px;
 }
 
 .secNav {
@@ -35,6 +81,174 @@ ul {
 	display: inline-block;
 	font-size: 25px;
 	font-family: Arial, Helvetica, sans-serif;
-	color: #d1d1d1;
+
 	margin: 12px;
+}
+
+.secNav ul li a {
+	color: #ac3b07;
+}
+
+.secNav ul li a.active {
+	color: #ff3c00;
+}
+
+.secNav ul li a:hover {
+	text-decoration: none;
+}
+
+.battleStyle h1 {
+	text-align: center;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 40px;
+	font-weight: lighter;
+}
+
+.cards {
+	width: 100%;
+	margin: 0 auto;
+	text-align: center;
+}
+
+.cards div {
+	display: inline-block;
+	width: 200px;
+	height: 200px;
+	border-radius: 5px;
+	box-shadow: 0px 40px 30px -20px rgba(0, 0, 0, 0.3);
+	background: linear-gradient(120deg, #ff0195, #9900ff);
+}
+
+.cards div:nth-child(2) {
+	margin: 0 30px;
+}
+
+.cards div p {
+	text-align: center;
+	margin: 20px;
+	color: #fff;
+}
+
+.table {
+	color: #8595a5;
+	width: 70%;
+	margin: 0 auto;
+	box-shadow: 0 80px 50px -50px rgb(37, 37, 37);
+	margin-bottom: 100px;
+}
+
+thead {
+	color: #d1e4f7;
+	background: #3f454b;
+	border: none;
+	outline: none;
+}
+
+.table thead th {
+	border: none;
+	background: #dd4d0a;
+}
+
+.table tbody {
+	background: #27292b;
+}
+
+.table tbody tr {
+	background: #36393b;
+}
+
+.table td,
+.table th {
+	padding: 0.75rem;
+	/* vertical-align: top; */
+	border-top: none;
+}
+
+.loading {
+	color: #c0bec2;
+	text-align: center;
+	margin-top: 100px;
+	font-family: sans-serif;
+	font-size: 50px;
+}
+
+/* tab css */
+.tabs {
+	/* border: 1px solid #aaa; */
+	/* display: flex; */
+	text-align: center;
+	cursor: pointer;
+}
+
+.tab-list {
+	background: #777;
+	padding-left: 0;
+}
+
+.tab-list-item {
+	display: inline-block;
+	list-style: none;
+	/* margin-bottom: -1px; */
+	padding: 0.5rem 0.75rem;
+	color: #eee;
+}
+
+.tab-list-active {
+	background-color: #666;
+}
+
+.tabs_sidebar {
+	width: 125px;
+	flex-shrink: 0;
+	background: #fff;
+}
+
+.tab_button {
+	display: block;
+	padding: 10px;
+	background: #eee;
+	border: none;
+	width: 100%;
+	outline: none;
+	cursor: pointer;
+}
+
+.tab_button.active {
+	background: #ddd;
+}
+.tab_button:focus {
+	outline: none;
+}
+
+.tab_button:not(:last-of-type) {
+	border-bottom: 1px solid #ddd;
+}
+
+.tab_button--active {
+	font-weight: bold;
+	border-right: 2px solid #009879;
+	background: #ddd;
+}
+
+.tab_content {
+	padding: 15px;
+	font-size: 0.8rem;
+	/* display: none; */
+}
+
+.tab_content h2 {
+	color: #31fdd4;
+}
+
+.tab_content p {
+	color: #05bb97;
+	font-size: 1.5rem;
+	font-weight: lighter;
+}
+.tab_content--active {
+	display: block;
+}
+
+.tab_content > :first-child {
+	margin-top: 0;
 }
