--- a/src/components/Theme/Light.css
+++ b/src/components/Theme/Light.css
@@ -1,20 +1,29 @@
 body {
-	background-color: #fff;
+	background-color: rgb(248, 248, 248);
+}
+
+a:not([href]):not([tabindex]) {
+	color: #0443a1;
+	text-decoration: none;
+}
+
+a:not([href]):not([tabindex]):focus,
+a:not([href]):not([tabindex]):hover {
+	color: #0443a1;
 }
 
 .topNav {
 	width: 100%;
-	height: 60px;
-	background: linear-gradient(120deg, #018cff, #0059ff);
-	border-bottom: 1px solid #0ff;
+	height: 80px;
+	background: linear-gradient(45deg, #2665f6, #26eff6);
+	box-shadow: 0 20px 20px -20px rgb(37, 37, 37);
 }
 
 .brandLogo {
-	margin-left: 150px;
 	font-family: sans-serif;
 	font-size: 50px;
 	font-weight: bold;
-	color: #4fb0ff;
+	color: #0443a1;
 }
 
 .topUL {
@@ -35,16 +44,17 @@ body {
 }
 
 .topUL a {
-	color: #fff;
+	color: #eee;
 	text-decoration: none;
 }
 
 .homeStyle h1 {
+	margin-top: 100px;
 	font-family: sans-serif;
 	font-size: 60px;
 	font-weight: lighter;
 	text-align: center;
-	color: #0059ff;
+	color: #2665f6;
 }
 
 .homeStyle h4 {
@@ -52,27 +62,14 @@ body {
 	font-size: 30px;
 	font-weight: lighter;
 	text-align: center;
-	color: #018cff;
+	color: #1549c4;
 }
 .homeStyle p {
 	width: 80%;
 	margin: 0 auto;
 	text-align: center;
-	color: #333;
+	color: #5d5e5f;
 	font-size: 20px;
-}
-
-.secNav {
-	margin-top: 30px;
-	text-align: center;
-}
-
-.secNav ul li {
-	display: inline-block;
-	font-size: 25px;
-	font-family: Arial, Helvetica, sans-serif;
-	color: #018cff;
-	margin: 12px;
 }
 
 .battleStyle h1 {
@@ -80,6 +77,13 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 40px;
 	font-weight: lighter;
+	color: #2665f6;
+	margin-top: 20px;
+}
+
+.battleStyle p {
+	font-size: 20px;
+	text-shadow: 0 5px 5px rgba(0, 0, 0, 0.3);
 }
 
 .cards {
@@ -93,8 +97,8 @@ body {
 	width: 200px;
 	height: 200px;
 	border-radius: 5px;
-	box-shadow: 0px 40px 30px -20px rgba(0, 0, 0, 0.3);
-	background: linear-gradient(120deg, #ff0195, #9900ff);
+	box-shadow: 0px 40px 30px -20px rgba(1, 109, 250, 0.4);
+	background: linear-gradient(45deg, #2665f6, #26eff6);
 }
 
 .cards div:nth-child(2) {
@@ -105,4 +109,143 @@ body {
 	text-align: center;
 	margin: 20px;
 	color: #fff;
+}
+
+.cards .icon {
+	font-size: 4rem;
+	color: #053dc0;
+	line-height: 0;
+	text-shadow: 0 10px 2px rgba(0, 0, 0, 0.15);
+}
+
+.table {
+	color: #8595a5;
+	width: 70%;
+	margin: 0 auto;
+	box-shadow: 0 80px 50px -50px rgb(37, 37, 37);
+	margin-top: 50px;
+	margin-bottom: 100px;
+}
+
+thead {
+	color: #d1e4f7;
+	background: #3f454b;
+	border: none;
+	outline: none;
+}
+
+.table thead th {
+	border: none;
+	background: #0443a1;
+}
+
+.table tbody {
+	background: #297fff;
+}
+
+.table tbody tr {
+	background: #4e95ff;
+}
+
+.table td,
+.table th {
+	padding: 0.75rem;
+	border-top: none;
+	color: #fff;
+}
+
+.error,
+.loading {
+	color: #606061;
+	text-align: center;
+	margin-top: 100px;
+	font-family: sans-serif;
+	font-size: 50px;
+}
+
+/* tab css */
+.tabs {
+	/* border: 1px solid #aaa; */
+	/* display: flex; */
+	text-align: center;
+	cursor: pointer;
+}
+
+.tab-list {
+	background: #0453c9;
+	padding-left: 0;
+	box-shadow: 0 10px 20px rgba(37, 37, 37, 0.7);
+}
+
+.tab-list-item {
+	display: inline-block;
+	list-style: none;
+	/* margin-bottom: -1px; */
+	padding: 0.5rem 0.75rem;
+	color: #ccc;
+}
+
+.tab-list-active {
+	background-color: #3885f8;
+}
+
+.tab-list-active.tab-list-item {
+	color: #fff;
+	font-weight: bold;
+}
+
+.tabs_sidebar {
+	width: 125px;
+	flex-shrink: 0;
+	background: #fff;
+}
+
+.tab_button {
+	display: block;
+	padding: 10px;
+	background: #eee;
+	border: none;
+	width: 100%;
+	outline: none;
+	cursor: pointer;
+}
+
+.tab_button.active {
+	background: #ddd;
+}
+.tab_button:focus {
+	outline: none;
+}
+
+.tab_button:not(:last-of-type) {
+	border-bottom: 1px solid #ddd;
+}
+
+.tab_button--active {
+	font-weight: bold;
+	border-right: 2px solid #009879;
+	background: #ddd;
+}
+
+.tab_content {
+	padding: 15px;
+	font-size: 0.8rem;
+	/* display: none; */
+}
+
+.tab_content h2 {
+	color: #31fdd4;
+}
+
+.tab_content p {
+	color: #05bb97;
+	font-size: 1.5rem;
+	font-weight: lighter;
+}
+.tab_content--active {
+	display: block;
+}
+
+.tab_content > :first-child {
+	margin-top: 0;
 }
