--- a/src/components/Theme/Light.css
+++ b/src/components/Theme/Light.css
@@ -13,10 +13,38 @@ a:not([href]):not([tabindex]):hover {
 }
 
 .topNav {
-	width: 100%;
 	height: 80px;
+	width: 100%;
+	position: absolute;
 	background: linear-gradient(45deg, #2665f6, #26eff6);
 	box-shadow: 0 20px 20px -20px rgb(37, 37, 37);
+}
+
+/* ui change css */
+
+.topNav .uiButton {
+	padding: 0.3em 0.5em;
+	border: none;
+	border-radius: 5px;
+	margin-right: 5%;
+	margin-top: 20px;
+	float: right;
+}
+
+.uiButton-light {
+	background: #fff;
+	color: #009ffc;
+	box-shadow: 0 0 20px 5px #fff;
+}
+
+.uiButton-dark {
+	background: #333;
+	color: #eee;
+	box-shadow: none;
+}
+
+.uiButton:focus {
+	outline: none;
 }
 
 .brandLogo {
@@ -48,8 +76,23 @@ a:not([href]):not([tabindex]):hover {
 	text-decoration: none;
 }
 
+.topUL a:hover {
+	color: #fff;
+}
+
+.topUL a.active {
+	color: #009879;
+}
+
+.homeStyle {
+	height: 100vh;
+	width: 100%;
+	/* position: relative; */
+	/* margin: 0 0; */
+}
+
 .homeStyle h1 {
-	margin-top: 100px;
+	padding-top: 15%;
 	font-family: sans-serif;
 	font-size: 60px;
 	font-weight: lighter;
@@ -64,6 +107,7 @@ a:not([href]):not([tabindex]):hover {
 	text-align: center;
 	color: #1549c4;
 }
+
 .homeStyle p {
 	width: 80%;
 	margin: 0 auto;
@@ -72,13 +116,19 @@ a:not([href]):not([tabindex]):hover {
 	font-size: 20px;
 }
 
+/* battle css */
+.battleStyle {
+	height: 100vh;
+	width: 100%;
+}
+
 .battleStyle h1 {
 	text-align: center;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 40px;
 	font-weight: lighter;
 	color: #2665f6;
-	margin-top: 20px;
+	padding-top: 100px;
 }
 
 .battleStyle p {
@@ -118,6 +168,12 @@ a:not([href]):not([tabindex]):hover {
 	text-shadow: 0 10px 2px rgba(0, 0, 0, 0.15);
 }
 
+/* popular css */
+.popular {
+	height: 100%;
+	width: 100%;
+}
+
 .table {
 	color: #8595a5;
 	width: 70%;
@@ -136,15 +192,15 @@ thead {
 
 .table thead th {
 	border: none;
-	background: #0443a1;
+	background: #172b4d;
 }
 
 .table tbody {
-	background: #297fff;
+	background: #5e72e4;
 }
 
 .table tbody tr {
-	background: #4e95ff;
+	background: #4eafff;
 }
 
 .table td,
@@ -156,6 +212,8 @@ thead {
 
 .error,
 .loading {
+	height: 100vh;
+	width: 100%;
 	color: #606061;
 	text-align: center;
 	margin-top: 100px;
@@ -169,10 +227,11 @@ thead {
 	/* display: flex; */
 	text-align: center;
 	cursor: pointer;
+	padding-top: 80px;
 }
 
 .tab-list {
-	background: #0453c9;
+	background: #0443a1;
 	padding-left: 0;
 	box-shadow: 0 10px 20px rgba(37, 37, 37, 0.7);
 }
@@ -193,11 +252,11 @@ thead {
 	color: #fff;
 	font-weight: bold;
 }
-
+/* 
 .tabs_sidebar {
 	width: 125px;
 	flex-shrink: 0;
-	background: #fff;
+	background: rgb(138, 12, 12);
 }
 
 .tab_button {
@@ -225,7 +284,7 @@ thead {
 	font-weight: bold;
 	border-right: 2px solid #009879;
 	background: #ddd;
-}
+} */
 
 .tab_content {
 	padding: 15px;
@@ -248,4 +307,77 @@ thead {
 
 .tab_content > :first-child {
 	margin-top: 0;
+}
+
+/* dark ui css */
+.dark .topNav {
+	/* display: none; */
+	background: #3f4448;
+	box-shadow: none;
+}
+
+.dark .topNav a {
+	color: #aaa;
+}
+
+.dark a:not([href]):not([tabindex]) {
+	color: #aaa;
+	text-decoration: none;
+}
+
+.dark a:not([href]):not([tabindex]):focus,
+.dark a:not([href]):not([tabindex]):hover {
+	color: #aaaaaa;
+}
+
+.dark ~ .homeStyle {
+	background: #24292e;
+}
+
+.dark ~ .homeStyle h1 {
+	color: #fd5406;
+}
+
+.dark ~ .homeStyle h4 {
+	color: #b95120;
+}
+.dark ~ .homeStyle p {
+	color: #858585;
+}
+
+/* dark battle css */
+.dark ~ .battleStyle {
+	background: #24292e;
+}
+
+.dark ~ .battleStyle h1 {
+	color: #ccc;
+}
+
+.dark ~ .battleStyle .cards div {
+	box-shadow: 0px 40px 30px -20px rgba(0, 0, 0, 0.3);
+	background: linear-gradient(120deg, #fd5406, #fd0606);
+}
+
+.dark ~ .battleStyle .cards .icon {
+	color: #24292e;
+}
+
+/* dark popular css */
+.dark ~ .popular {
+	background: #24292e;
+}
+
+.dark ~ .popular .tabs .tab-list {
+	background: #57636c;
+}
+
+.dark ~ .popular .tabs .tab-list .tab-list-active,
+.dark ~ .popular .table thead th {
+	background: #fd5406;
+}
+
+.dark ~ .popular .table tbody tr {
+	background: #36393b;
+	border-bottom: 1px solid #222;
 }
