--- a/src/components/Theme/Light.css
+++ b/src/components/Theme/Light.css
@@ -225,7 +225,6 @@ a:not([href]):not([tabindex]):hover {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	box-shadow: 0 0 100px 100px rgba(0, 0, 0, 0.7);
 }
 
 .display.hide {
@@ -247,15 +246,82 @@ a:not([href]):not([tabindex]):hover {
 	cursor: pointer;
 }
 
+.overlay {
+	height: 100vh;
+	width: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	background: rgba(0, 0, 0, 0.7);
+}
+
+.overlay.hide {
+	visibility: hidden;
+}
+
 /* compare css */
+.wrapper {
+	position: absolute;
+	width: 95%;
+	height: 90vh;
+}
+
+.wrapper > div {
+	float: right;
+	margin: 10px;
+}
+
+.wrapper #div1 {
+	width: 48%;
+	height: 80vh;
+	border-left: 3px solid rgb(30, 255, 0);
+}
+
+.wrapper #div2 {
+	width: 48%;
+	height: 80vh;
+	border-left: 3px solid rgb(238, 255, 0);
+}
+
 .match {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	/* flex-wrap: wrap; */
+	margin-top: 50px;
+	margin: 10px 10px;
+}
+
+.match img {
+	height: 150px;
+	width: 150px;
 }
 
 .match .row {
 	flex: 1;
+	height: 80%;
+	width: 40%;
+	/* border: 1px solid red; */
+	display: block;
+}
+
+.match .row .stats h3 {
+	color: #006eff;
+}
+
+.match .row .stats ul {
+	list-style: none;
+}
+
+.match #gitId {
+	bottom: 10px;
+	padding-top: 50px;
+	padding: 0.4em 0.8em;
+	background: #eee;
+	color: #444;
+	border-radius: 20px;
+	text-decoration: none;
+	cursor: pointer;
 }
 
 #getUser .form-control {
@@ -513,9 +579,14 @@ thead {
 
 .dark ~ div .display {
 	background: #333;
-	color: #fff;
+	color: #aaa;
 }
 
 .dark ~ div li {
-	color: #fff;
+	color: #ffb915;
+}
+
+.dark ~ div #gitId {
+	background: #444;
+	color: #eee;
 }
