--- a/src/components/Theme/Light.css
+++ b/src/components/Theme/Light.css
@@ -2,16 +2,6 @@ body {
 	background-color: rgb(248, 248, 248);
 }
 
-a:not([href]):not([tabindex]) {
-	color: #0443a1;
-	text-decoration: none;
-}
-
-a:not([href]):not([tabindex]):focus,
-a:not([href]):not([tabindex]):hover {
-	color: #0443a1;
-}
-
 .topNav {
 	height: 80px;
 	width: 100%;
@@ -47,11 +37,12 @@ a:not([href]):not([tabindex]):hover {
 	outline: none;
 }
 
-.brandLogo {
+.topNav .container h3 {
 	font-family: sans-serif;
 	font-size: 50px;
 	font-weight: bold;
 	color: #0443a1;
+	display: inline;
 }
 
 .topUL {
@@ -63,16 +54,15 @@ a:not([href]):not([tabindex]):hover {
 	margin-left: 200px;
 }
 
-.topNav ul li {
+.topNav li {
 	display: inline-block;
-	font-size: 26px;
-	font-family: Arial, Helvetica, sans-serif;
-	color: #fff;
 	margin: auto 10px;
 }
 
 .topUL a {
-	color: #fff;
+	font-size: 26px;
+	font-family: Arial, Helvetica, sans-serif;
+	color: rgb(255, 255, 255);
 	text-decoration: none;
 }
 
@@ -87,8 +77,6 @@ a:not([href]):not([tabindex]):hover {
 .homeStyle {
 	height: 100vh;
 	width: 100%;
-	/* position: relative; */
-	/* margin: 0 0; */
 }
 
 .homeStyle h1 {
@@ -274,20 +262,19 @@ a:not([href]):not([tabindex]):hover {
 .wrapper #div1 {
 	width: 48%;
 	height: 80vh;
-	border-left: 3px solid rgb(30, 255, 0);
+	border-left: 3px solid #1eff00;
 }
 
 .wrapper #div2 {
 	width: 48%;
 	height: 80vh;
-	border-left: 3px solid rgb(238, 255, 0);
+	border-left: 3px solid #eeff00;
 }
 
 .match {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	/* flex-wrap: wrap; */
 	margin-top: 50px;
 	margin: 10px 10px;
 }
@@ -301,12 +288,11 @@ a:not([href]):not([tabindex]):hover {
 	flex: 1;
 	height: 80%;
 	width: 40%;
-	/* border: 1px solid red; */
 	display: block;
 }
 
-.match .row .stats h3 {
-	color: #006eff;
+.match .row h3 {
+	color: #444;
 }
 
 .match .row .stats ul {
@@ -472,14 +458,8 @@ thead {
 	color: #aaa;
 }
 
-.dark a:not([href]):not([tabindex]) {
-	color: #aaa;
-	text-decoration: none;
-}
-
-.dark a:not([href]):not([tabindex]):focus,
-.dark a:not([href]):not([tabindex]):hover {
-	color: #aaaaaa;
+.dark .topNav h3 {
+	color: #777;
 }
 
 .dark ~ .homeStyle {
@@ -589,4 +569,114 @@ thead {
 .dark ~ div #gitId {
 	background: #444;
 	color: #eee;
+}
+
+/* ******************************** */
+/* responsive media queries */
+
+@media (max-width: 480px) {
+	/* homepage css */
+	.topNav .container h3 {
+		font-size: 30px;
+		text-align: center;
+	}
+
+	.topNav .uiButton {
+		margin: 0;
+		margin-top: -20px;
+	}
+
+	.topUL {
+		margin-left: 0;
+		margin: 0 auto;
+	}
+
+	.topUL a {
+		font-size: 20px;
+	}
+
+	.homeStyle h1 {
+		padding-top: 20vh;
+		font-size: 26px;
+	}
+
+	/* popular page css */
+	.table {
+		width: 95%;
+	}
+
+	/* battle css */
+	.cards div {
+		width: 100px;
+		height: 100px;
+		margin: 0;
+	}
+
+	.cards div:nth-child(2) {
+		margin: 10px;
+	}
+
+	.cards div p {
+		font-size: 14px;
+		margin-top: 5px;
+		line-height: 16px;
+	}
+
+	.cards .icon {
+		font-size: 2rem;
+	}
+
+	/* modal css */
+
+	.overlay {
+		height: 100vh;
+	}
+
+	.display {
+		height: 120vh;
+		width: 95%;
+		position: absolute;
+		top: 20%;
+		left: 21%;
+		transform: translate(-20%, -10%);
+	}
+
+	.wrapper > div {
+		margin: 0;
+		float: left;
+	}
+
+	.wrapper #div1 {
+		width: 94%;
+		height: auto;
+		border: none;
+	}
+
+	.wrapper #div2 {
+		width: 94%;
+		height: auto;
+		border: none;
+	}
+
+	.match {
+		/* background: #fff; */
+		margin: 10px 10px;
+	}
+
+	.match .row {
+		width: 100%;
+		height: auto;
+	}
+
+	.match .row .stats h1 {
+		font-size: 40px;
+		line-height: 0;
+		padding: 0;
+		margin: 0;
+	}
+
+	.match img {
+		height: 100px;
+		width: 100px;
+	}
 }
